# rp-webapp

./: .gdbinit  69-probe-rs.rules  Cargo.toml  Dockerfile  compile-pico-debugger.sh  compile-pico.sh  docker-compose.yml  run_in_docker.ps1
cargo/: config.toml
src/: base64.rs  http.rs  jwt.rs  kv.rs  main.rs  sdcard.rs  template.rs  user.rs
src/routes/sign_up/: post.rs
src/templates/: sign-up.html
src/templates/partials/: sign-up.html
