[package]
name = "pico-webapp"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", path = "../embassy-main/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.4.0", path = "../embassy-main/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.3.1", path = "../embassy-main/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", path = "../embassy-main/embassy-time", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "../embassy-main/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", path = "../embassy-main/embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.2.0", path = "../embassy-main/embassy-net", features = ["defmt", "nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { version = "0.1.0", path = "../embassy-main/embassy-net-wiznet", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../embassy-main/embassy-futures" }
embassy-usb-logger = { version = "0.1.0", path = "../embassy-main/embassy-usb-logger" }
embassy-lora = { version = "0.1.0", path = "../embassy-main/embassy-lora", features = ["time", "defmt"] }
lora-phy = { version = "2" }
lorawan-device = { version = "0.11.0", default-features = false, features = ["async", "external-lora-phy"] }
lorawan = { version = "0.7.4", default-features = false, features = ["default-crypto"] }
cyw43 = { path = "../embassy-main/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { path = "../embassy-main/cyw43-pio", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.8"
usbd-hid = "0.6.1"
embedded-sdmmc = "0.6.0"
embedded-hal = "0.2.7"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "2", features = ["nightly"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
micro-ecc-sys = { version = "0.3.2", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["asm"] }
critical-section = "1.1.2"

[profile.release]
debug = false
opt-level = 's'
lto = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
# Apply default settings to all packages...

[profile.dev.package.micro-ecc-sys]
debug = false
opt-level = 's'